--- a/Guidebook.html
+++ b/Guidebook.html
@@ -7,6 +7,7 @@
 	<script scr='controller/NotesController.js'></script>
 	<script scr='model/NoteModel.js'></script>
 	<script scr='model/ChapterModel.js'></script>
+	<script scr='view/directives/NoteList.js'></script>
 	<link rel="stylesheet" href="view/styles.css">
 	<title>AngularJS Starter Guidebook</title>
 </head>
